@@ -1550,11 +1550,6 @@ name|map
 argument_list|)
 condition|)
 block|{
-name|checkForDuplicatedNames
-argument_list|(
-name|map
-argument_list|)
-expr_stmt|;
 name|maps
 operator|.
 name|add
@@ -1590,257 +1585,6 @@ name|refreshMappingCache
 argument_list|()
 expr_stmt|;
 block|}
-block|}
-specifier|private
-name|void
-name|checkForDuplicatedNames
-parameter_list|(
-name|DataMap
-name|map
-parameter_list|)
-block|{
-for|for
-control|(
-name|DbEntity
-name|entity
-range|:
-name|map
-operator|.
-name|getDbEntities
-argument_list|()
-control|)
-block|{
-name|DbEntity
-name|foundDbEntity
-init|=
-name|getDbEntity
-argument_list|(
-name|entity
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|foundDbEntity
-operator|!=
-literal|null
-condition|)
-block|{
-name|processWarning
-argument_list|(
-name|entity
-operator|.
-name|getName
-argument_list|()
-argument_list|,
-name|map
-operator|.
-name|getName
-argument_list|()
-argument_list|,
-name|foundDbEntity
-operator|.
-name|getDataMap
-argument_list|()
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-for|for
-control|(
-name|ObjEntity
-name|entity
-range|:
-name|map
-operator|.
-name|getObjEntities
-argument_list|()
-control|)
-block|{
-name|ObjEntity
-name|foundObjEntity
-init|=
-name|getObjEntity
-argument_list|(
-name|entity
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|foundObjEntity
-operator|!=
-literal|null
-condition|)
-block|{
-name|processWarning
-argument_list|(
-name|entity
-operator|.
-name|getName
-argument_list|()
-argument_list|,
-name|map
-operator|.
-name|getName
-argument_list|()
-argument_list|,
-name|foundObjEntity
-operator|.
-name|getDataMap
-argument_list|()
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-for|for
-control|(
-name|Procedure
-name|procedure
-range|:
-name|map
-operator|.
-name|getProcedures
-argument_list|()
-control|)
-block|{
-name|Procedure
-name|foundProcedure
-init|=
-name|getProcedure
-argument_list|(
-name|procedure
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|foundProcedure
-operator|!=
-literal|null
-condition|)
-block|{
-name|processWarning
-argument_list|(
-name|procedure
-operator|.
-name|getName
-argument_list|()
-argument_list|,
-name|map
-operator|.
-name|getName
-argument_list|()
-argument_list|,
-name|foundProcedure
-operator|.
-name|getDataMap
-argument_list|()
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-for|for
-control|(
-name|Embeddable
-name|embeddable
-range|:
-name|map
-operator|.
-name|getEmbeddables
-argument_list|()
-control|)
-block|{
-name|Embeddable
-name|foundEmbeddable
-init|=
-name|getEmbeddable
-argument_list|(
-name|embeddable
-operator|.
-name|getClassName
-argument_list|()
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|foundEmbeddable
-operator|!=
-literal|null
-condition|)
-block|{
-name|processWarning
-argument_list|(
-name|embeddable
-operator|.
-name|getClassName
-argument_list|()
-argument_list|,
-name|map
-operator|.
-name|getName
-argument_list|()
-argument_list|,
-name|foundEmbeddable
-operator|.
-name|getDataMap
-argument_list|()
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-block|}
-specifier|private
-name|void
-name|processWarning
-parameter_list|(
-name|String
-name|duplicatedName
-parameter_list|,
-name|String
-name|dataMapName
-parameter_list|,
-name|String
-name|originalDataMapName
-parameter_list|)
-block|{
-name|logger
-operator|.
-name|warn
-argument_list|(
-literal|"Duplicated name "
-operator|+
-name|duplicatedName
-operator|+
-literal|" was found in "
-operator|+
-name|dataMapName
-operator|+
-literal|". This name was also found in "
-operator|+
-name|originalDataMapName
-operator|+
-literal|"."
-argument_list|)
-expr_stmt|;
 block|}
 comment|/**      * Refreshes entity cache to reflect the current state of the DataMaps in      * the EntityResolver.      *      * @since 4.0      */
 specifier|public
