@@ -101,6 +101,20 @@ name|cayenne
 operator|.
 name|util
 operator|.
+name|CayenneMapEntry
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|util
+operator|.
 name|commons
 operator|.
 name|CompositeCollection
@@ -347,6 +361,18 @@ range|:
 name|maps
 control|)
 block|{
+name|checkNameDuplicates
+argument_list|(
+name|map
+operator|.
+name|getDbEntityMap
+argument_list|()
+argument_list|,
+name|dbEntities
+argument_list|,
+name|map
+argument_list|)
+expr_stmt|;
 name|dbEntities
 operator|.
 name|putAll
@@ -367,6 +393,18 @@ name|maps
 control|)
 block|{
 comment|// index ObjEntities by name
+name|checkNameDuplicates
+argument_list|(
+name|map
+operator|.
+name|getObjEntityMap
+argument_list|()
+argument_list|,
+name|objEntities
+argument_list|,
+name|map
+argument_list|)
+expr_stmt|;
 name|objEntities
 operator|.
 name|putAll
@@ -454,6 +492,18 @@ expr_stmt|;
 block|}
 block|}
 comment|// index stored procedures
+name|checkNameDuplicates
+argument_list|(
+name|map
+operator|.
+name|getProcedureMap
+argument_list|()
+argument_list|,
+name|procedures
+argument_list|,
+name|map
+argument_list|)
+expr_stmt|;
 name|procedures
 operator|.
 name|putAll
@@ -645,6 +695,106 @@ name|node
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+block|}
+block|}
+comment|/**      * Utility method to warn about name duplicates in different DataMaps.      *      * @param src map      * @param dst map with already added entities      * @param srcMap source DataMap      */
+specifier|private
+name|void
+name|checkNameDuplicates
+parameter_list|(
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|?
+extends|extends
+name|CayenneMapEntry
+argument_list|>
+name|src
+parameter_list|,
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|?
+extends|extends
+name|CayenneMapEntry
+argument_list|>
+name|dst
+parameter_list|,
+name|DataMap
+name|srcMap
+parameter_list|)
+block|{
+for|for
+control|(
+name|CayenneMapEntry
+name|entry
+range|:
+name|src
+operator|.
+name|values
+argument_list|()
+control|)
+block|{
+name|CayenneMapEntry
+name|duplicate
+init|=
+name|dst
+operator|.
+name|get
+argument_list|(
+name|entry
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|duplicate
+operator|!=
+literal|null
+condition|)
+block|{
+name|DataMap
+name|parent
+init|=
+operator|(
+name|DataMap
+operator|)
+name|duplicate
+operator|.
+name|getParent
+argument_list|()
+decl_stmt|;
+name|logger
+operator|.
+name|warn
+argument_list|(
+literal|"Found duplicated name "
+operator|+
+name|entry
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|" in datamaps "
+operator|+
+name|srcMap
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|" and "
+operator|+
+name|parent
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 block|}
