@@ -22,6 +22,7 @@ Bug Fixes:
 
 CAY-2658 DataChannelMetaData is null during cgen execution
 CAY-2661 NPE on DB Import screen
+CAY-2678 Inheritance warnings caused by unnecessary MappingCache creations during initialization
 CAY-2683 Don't use DISTINCT for joins on to-one related tables
 CAY-2685 JsonType should use the actual JDBC type, not OTHER
 CAY-2686 SQL translator incorrectly quotes fully qualified tables' names
